--- a/EDAS/EDAS.WebApp/EDAS.WebApp.csproj
+++ b/EDAS/EDAS.WebApp/EDAS.WebApp.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EDAS.Common\EDAS.Common.csproj" />
+  </ItemGroup>
+
 </Project>
