--- a/EDAS/EDAS.Worker/EDAS.Worker.csproj
+++ b/EDAS/EDAS.Worker/EDAS.Worker.csproj
@@ -12,4 +12,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EDAS.BacktrackingCombinatronics\EDAS.BacktrackingCombinatronics.csproj" />
+    <ProjectReference Include="..\EDAS.Common\EDAS.Common.csproj" />
+  </ItemGroup>
+
 </Project>
