Added Queue factory

--- a/EDAS/EDAS.Worker/appsettings.json
+++ b/EDAS/EDAS.Worker/appsettings.json
@@ -5,5 +5,22 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "WorkerType": {
+    "Type": "Combinatronics"
+  },
+
+  "RabbitMqConfig": {
+    "Combinatronics": {
+      "ExchangeName": "direct_combinatronics",
+      "ExchangeType": "direct",
+      "QueueName": "combinatronics_queue",
+      "RoutingKey": "algorithm.backtracking.combinatronics",
+      "QueueDurable": "true",
+      "QueueExclusive": "false",
+      "QueueAutodelete": "false",
+      "AlgorithmType": "Combinatronics"
+    }
+  },
   "AllowedHosts": "*"
 }
