Added producer factory in WebApp + refactor

--- a/EDAS/EDAS.Common/EDAS.Common.csproj
+++ b/EDAS/EDAS.Common/EDAS.Common.csproj
@@ -7,6 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="rabbitmqconfig.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="rabbitmqconfig.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="RabbitMQ.Client" Version="7.0.0" />
   </ItemGroup>
 
