--- a/EDAS/EDAS.Common/rabbitmqconfig.json
+++ b/EDAS/EDAS.Common/rabbitmqconfig.json
@@ -1,8 +1,8 @@
 {
   "RabbitMqConfig": {
     "Broker": {
-      "Hostname": "localhost",
-      "Port": "15672",
+      "Hostname": "rabbitmq",
+      "Port": "5672",
       "Username": "guest", /*move to secrets*/
       "Password": "guest", /*move to secrets*/
       "ExchangeName": "edas_exchange",
