--- a/EDAS/EDAS.WebApp/appsettings.json
+++ b/EDAS/EDAS.WebApp/appsettings.json
@@ -7,6 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "EDASWebAppContextConnection": "Server=DESKTOP-R1SPFMN\\ADISQL;Database=EDAS.WebApp;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+    "EDASWebAppContextConnection": "Server=localhost;Database=EDASWebApp;User Id=sa;Password=SwN12345678;Encrypt=False;TrustServerCertificate=True"
   }
 }
+
+/*"Server=DESKTOP-R1SPFMN\\ADISQL;Database=EDAS.WebApp;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"*/
