--- a/EDAS/docker-compose.override.yml
+++ b/EDAS/docker-compose.override.yml
@@ -1,39 +1,43 @@
-version: '3.8'
-
 services:
-  edas.users.db:
-    container_name: edas.users.db
+  edasusersdb:
+    container_name: edasusersdb
     environment:
-        - ACCEPT_EULA=Y
-        - SA_PASSWORD=SwN12345678
+      - ACCEPT_EULA=Y
+      - SA_PASSWORD=SwN12345678
     restart: always
     ports:
-        - "1433:1433"
+      - "1433:1433"
 
-  messagebroker:
-    container_name: messagebroker
-    hostname: edas-mq
+  rabbitmq:
+    container_name: rabbitmq
     environment:
       - RABBITMQ_DEFAULT_USER=guest
       - RABBITMQ_DEFAULT_PASS=guest
     restart: always
     ports:
-      - "5672:5672"
       - "15672:15672"
+      - "5672:5672"
+    healthcheck:
+      test: ["CMD", "rabbitmqctl", "status"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   edas.webapp:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_HTTP_PORTS=8080
       - ASPNETCORE_HTTPS_PORTS=8081
-      - ConnectionStrings__Database=Server=edas.users.db;Database=EDAS.WebApp;User Id=sa;Password=SwN12345678;Encrypt=False;TrustServerCertificate=True
-      - MessageBroker__Host=amqp://edas-mq:5672
-      - MessageBroker__UserName=guest
-      - MessageBroker__Password=guest
-      - FeatureManagement__OrderFullfilment=false
+      - ConnectionStrings__Database=Server=edasusersdb;Database=EDASWebApp;User Id=sa;Password=SwN12345678;Encrypt=False;TrustServerCertificate=True
+      - RabbitMq__HostName=rabbitmq
+      - RabbitMq__Port=5672
+      - RabbitMq__UserName=guest
+      - RabbitMq__Password=guest
     depends_on:
-      - edas.users.db
-      - messagebroker
+      edasusersdb:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
     ports:
-      - "6003:8080"
-      - "6063:8081"
+      - "6001:8080"
+      - "6061:8081"
