Docker compose 3 | working container for EDAS.WebApp

--- a/EDAS/EDAS.Worker/EDAS.Worker.csproj
+++ b/EDAS/EDAS.Worker/EDAS.Worker.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>a1ebad85-e11c-4e7d-9480-ff8edd41598e</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
