--- a/EDAS/EDAS.WebApp/EDAS.WebApp.csproj
+++ b/EDAS/EDAS.WebApp/EDAS.WebApp.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>caa804f5-feb0-4f1b-b9cc-17e096a0580e</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
