--- a/EDAS/EDAS.WebApp/appsettings.json
+++ b/EDAS/EDAS.WebApp/appsettings.json
@@ -7,8 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "EDASWebAppContextConnection": "Server=localhost;Database=EDASWebApp;User Id=sa;Password=SwN12345678;Encrypt=False;TrustServerCertificate=True"
+    "EDASWebAppContextConnection": "Server=DESKTOP-R1SPFMN\\ADISQL;Database=EDAS.WebApp;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
   }
 }
 
+/*"Server=localhost;Database=EDASWebApp;User Id=sa;Password=SwN12345678;Encrypt=False;TrustServerCertificate=True"*/
 /*"Server=DESKTOP-R1SPFMN\\ADISQL;Database=EDAS.WebApp;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"*/
