--- a/EDAS/EDAS.Worker/EDAS.Worker.csproj
+++ b/EDAS/EDAS.Worker/EDAS.Worker.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\EDAS.Sorting\EDAS.Sorting.csproj" />
     <ProjectReference Include="..\EDAS.BacktrackingCombinatronics\EDAS.BacktrackingCombinatronics.csproj" />
     <ProjectReference Include="..\EDAS.Common\EDAS.Common.csproj" />
   </ItemGroup>
