--- a/EDAS/EDAS.Common/EDAS.Common.csproj
+++ b/EDAS/EDAS.Common/EDAS.Common.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="RabbitMQ.Client" Version="7.0.0" />
   </ItemGroup>
 
