--- a/EDAS/EDAS.WebApp/appsettings.json
+++ b/EDAS/EDAS.WebApp/appsettings.json
@@ -5,11 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
   "AllowedHosts": "*",
+
   "ConnectionStrings": {
-    "EDASWebAppContextConnection": "Server=DESKTOP-R1SPFMN\\ADISQL;Database=EDAS.WebApp;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+    "DefaultConnection": "Data Source=EDASWebApp.db"
+  },
+
+  "AzureConfig:KeyVaultName": "edas-vault",
+
+  "DatabaseSettings": {
+    "DeleteOnStartup": "true"
   }
 }
-
-/*"Server=localhost;Database=EDASWebApp;User Id=sa;Password=SwN12345678;Encrypt=False;TrustServerCertificate=True"*/
-/*"Server=DESKTOP-R1SPFMN\\ADISQL;Database=EDAS.WebApp;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"*/
