--- a/EDAS/EDAS.Worker/appsettings.json
+++ b/EDAS/EDAS.Worker/appsettings.json
@@ -6,8 +6,11 @@
     }
   },
 
+  "AzureConfig:KeyVaultName": "edas-vault",
+
   "WorkerType": {
     "Type": "Sorting"
   },
+
   "AllowedHosts": "*"
 }
