Azure migration 1 | Edas.WebApp

--- a/.gitignore
+++ b/.gitignore
@@ -397,3 +397,6 @@ FodyWeavers.xsd
 # JetBrains Rider
 *.sln.iml
 /EDAS/TemplateEngineHost/vs
+/EDAS/EDAS.WebApp/EDASWebApp.db-wal
+/EDAS/EDAS.WebApp/EDASWebApp.db-shm
+/EDAS/EDAS.WebApp/EDASWebApp.db
