--- a/EDAS/EDAS.WebApp/appsettings.Development.json
+++ b/EDAS/EDAS.WebApp/appsettings.Development.json
@@ -4,5 +4,22 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "DatabaseSettings": {
+    "DeleteOnStartup": "true"
   }
+
+  //STORE IT IN USER SECRETS
+  //"RabbitMQConfig": {
+  //  "Hostname": "",
+  //  "Port": "",
+  //  "Username": "",
+  //  "Password": ""
+  //},
+
+  //"EmailConfig": {
+  //  "ApiKey": "",
+  //  "FromEmail": "",
+  //  "ApiUrl": ""
+  //}
 }
