--- a/EDAS.AzureFunction/EDAS.AzureFunction.csproj
+++ b/EDAS.AzureFunction/EDAS.AzureFunction.csproj
@@ -14,6 +14,9 @@
     <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="2.0.0" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\EDAS\EDAS.Common\EDAS.Common.csproj" />
+  </ItemGroup>
+  <ItemGroup>
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
