--- a/EDAS/EDAS.Worker/appsettings.Development.json
+++ b/EDAS/EDAS.Worker/appsettings.Development.json
@@ -5,4 +5,18 @@
       "Microsoft.AspNetCore": "Warning"
     }
   }
+
+  //STORE IT IN USER SECRETS
+  //"RabbitMQConfig": {
+  //  "Hostname": "",
+  //  "Port": "",
+  //  "Username": "",
+  //  "Password": ""
+  //},
+
+  //"EmailConfig": {
+  //  "ApiKey": "",
+  //  "FromEmail": "",
+  //  "ApiUrl": ""
+  //}
 }
